# nots-bot

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  todo.txt
aiobot/: __main__.py  app.py  loader.py
aiobot/database/: postgresql.py
aiobot/databases/: postgresql.py  redis.py
aiobot/handlers/: __init__.py  base.py  change.py  create.py  notes.py  notify.py  start.py  timezone.py
aiobot/keyboards/: buttons.py  notes.py  timezone.py
aiobot/keyboards/reply/: base.py
aiobot/middlewares/: __init__.py  throttling.py
aiobot/utils/: commands.py  config.py  database.py  emoji.py  logging.py  scheduler.py
bot/: Dockerfile  main.py  requirements.txt
migrations/: 1.2__create_hash_index_notes.sql  ATTENTION.txt  V1.1__create_table_notes.sql  V1.2__create_hash_index_notes.sql
