[tool.poetry]
name = "NoTS Bot"
version = "1.0.0"
description = "Telegram bot with notes and notifications"
authors = ["Ivan Velichko <notjustivan@gmail.com>"]
readme = "README.md"
packages = [{include = "aiobot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
asyncpg = "^0.27.0"
aioredis = "^2.0.1"
aiocron = "^1.8"
numdeclination = "^0.0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"